[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/inventory/item_slot/ItemSlotFocus.tres" type="StyleBox" id=1]
[ext_resource path="res://gui/inventory/item_slot/ItemSlotNormal.tres" type="StyleBox" id=2]
[ext_resource path="res://gui/inventory/item_slot/ItemSlot.gd" type="Script" id=3]
[ext_resource path="res://items/bottle_of_poison.png" type="Texture" id=4]
[ext_resource path="res://gui/menu_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://gui/inventory/item_slot/ItemSlotPressed.tres" type="StyleBox" id=7]

[node name="ItemSlot" type="AspectRatioContainer" groups=["ItemSlot"]]
margin_right = 774.0
margin_bottom = 178.0
focus_mode = 2
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ratio = 7.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_top = 33.7143
margin_right = 774.0
margin_bottom = 144.286
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 33.7143
margin_right = 774.0
margin_bottom = 144.286
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 24.0
margin_right = 750.0
margin_bottom = 102.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="MarginContainer/HBoxContainer"]
margin_right = 239.0
margin_bottom = 102.0
size_flags_horizontal = 11
size_flags_vertical = 3
custom_colors/font_color = Color( 0.105882, 0.105882, 0.188235, 1 )
custom_fonts/font = ExtResource( 5 )
text = "name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 243.0
margin_right = 482.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( 16, 8 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quantity" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 486.0
margin_right = 598.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( 8, 8 )
size_flags_horizontal = 2
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "x 69"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="." to="." method="_on_ItemSlot_focus_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
